# weaponmod

./: .gitignore  BSP_parse_ents.cpp  CEntity.cpp  CEntity.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  CVirtHook.cpp  CVirtHook.h  Makefile  README.md  README.txt  bsp_parse.cpp  dllFunc.cpp  dllFunc.h  effects.cpp  effects.h  engFunc.cpp  grenade.cpp  grenade.h  hook_crowbar.cpp  hook_info_target.cpp  hooks.cpp  hooks.h  libFunc.cpp  libFunc.h  meta_api.cpp  natives.cpp  natives_ammo.cpp  natives_weapon.cpp  parse.cpp  parse.h  parser.cpp  parser.h  srvcmd.cpp  utils.cpp  utils.h  virtual_hooker.cpp  weaponmod.cpp  weaponmod.h  (+18 more)
.github/workflows/: ci.yml  msbuild.yml
amxmodx/configs/mods/: valve.ini  valve_aghlru.ini
amxmodx/configs/spawnpoints/: _my_map.ini
amxmodx/configs/weaponmod/: weaponmod.ini
amxmodx/configs/weaponmod/mods/: ag.ini  gearbox.ini  valve.ini  valve.old.ini  valve_aghlru.ini  valve_miniag.ini
amxmodx/configs/weaponmod/spawnpoints/: _my_map.ini
amxmodx/scripting/include/: beams.inc  hl_wpnmod.inc  hl_wpnmod_compat.inc  hl_wpnmod_const.inc  hl_wpnmod_deprecated.inc
cmake/: CMakeLinuxPresets.json  CMakeWindowsPresets.json  DeployLibs.cmake  GitVersionSemverfier.cmake
dep/hlsdk/engine/: eiface.h
dep/metamod/: osdep.h
gamedir/: CMakeLists.txt
gamedir/addons/amxmodx/configs/weaponmod/: weaponmod.ini
gamedir/addons/amxmodx/data/gamedata/weaponmod.games/: master.games.txt
gamedir/addons/amxmodx/data/gamedata/weaponmod.games/valve/: settings.txt
gamedir/addons/amxmodx/scripting/include/: hl_wpnmod.inc
gamedir/amxmodx/data/gamedata/weaponmod.games/: master.games.txt
gamedir/amxmodx/data/gamedata/weaponmod.games/valve/: offsets-virtual-cbaseplayerammo.txt  offsets-virtual-cbaseplayeritem.txt  offsets-virtual-cbaseplayerweapon.txt  offsets-vtable.txt  settings.txt
gamedir/amxmodx/scripting/include/: hl_wpnmod.inc  hl_wpnmod_const.inc
include/: utils.h  virtual_hooker.h  wpnmod_config.h  wpnmod_entity.h  wpnmod_grenade.h  wpnmod_hooker.h  wpnmod_hooks.h  wpnmod_items.h  wpnmod_log.h  wpnmod_memory.h  wpnmod_parse.h  wpnmod_pvdata.h  wpnmod_utils.h  wpnmod_vhooker.h  wpnmod_vtable.h
msvc/: .gitignore  PreBuild.bat  resource.h  weaponmod.rc  weaponmod.vcxproj  weaponmod.vcxproj.filters
msvc10/: weaponmod.sln  weaponmod.vcxproj  weaponmod.vcxproj.filters
msvc12/: weaponmod.vcxproj  weaponmod.vcxproj.filters
pawn/: beams.inc  hl_wpnmod.inc  hl_wpnmod_const.inc
scripts/: .gitignore  build_release.py  merge_artifacts.py  package_target.py
sdk/: amxxmodule.cpp  amxxmodule.h  moduleconfig.h
src/: CMakeLists.txt  CString.h  appversion.h.in  weaponmod.rc  wpnmod_config.cpp  wpnmod_config.h  wpnmod_grenade.cpp  wpnmod_grenade.h  wpnmod_hooks.cpp  wpnmod_hooks.h  wpnmod_items.cpp  wpnmod_items.h  wpnmod_log.cpp  wpnmod_log.h  wpnmod_main.cpp  wpnmod_memory.cpp  wpnmod_memory.h  wpnmod_memory_engine.cpp  wpnmod_memory_gamedll.cpp  wpnmod_natives.cpp  wpnmod_parse.cpp  wpnmod_parse.h  wpnmod_pvdata.cpp  wpnmod_pvdata.h  wpnmod_utils.cpp  wpnmod_utils.h  wpnmod_version.cpp  wpnmod_version.h  wpnmod_vtable.cpp  wpnmod_vtable.h
src/sdk/: HLTypeConversion.h  IGameConfigs.h  amxx_gameconfigs.h  amxxmodule.cpp  amxxmodule.h  moduleconfig.h
